1997-11-18  Tim Pierce  <twp@twp.tezcat.com>

	* posix.texi: New file; moved docs for POSIX interface here.
	* Makefile.am: Add posix.texi.
	* Makefile.in: Regenerated.
	* guile-ref.texi: Reorganize top-level menu.  @include posix.texi.
	* scheme.texi: Moved many nodes around, some restructuring
	(e.g. new "Data Structures" node for records, structures, arrays,
	hash tables, and so on).

1997-10-19  Mark Galassi  <rosalia@cygnus.com>

	* gh.texi (Calling Scheme procedures from C): added many routines
	as I go through R4RS and try to complete the gh_ interface.

Wed Oct  8 04:51:54 1997  Gary Houston  <ghouston@actrix.gen.nz>

	*  scheme.texi (Dynamic Roots): added batch mode procedures.

1997-10-03  Mikael Djurfeldt  <mdj@nada.kth.se>

	* scheme.texi (Vtables): Changed 0 --> @code{vtable-index-layout};
	Changed @code{struct-vtable-offset} --> @code{vtable-offset-user};
	Added short note about the print call-back initializer.  (This
	section is in need of review.  However, we shoudn't spend much
	time on it since the structs will be replaced by something
	equivalent, but with a different interface.}

Sun Sep 28 00:02:35 1997  Mark Galassi  <rosalia@nis.lanl.gov>

	* scheme.texi (Keywords): very small re-organization to take
	advantage of the fact that read-options is now documented in
	another chapter.

Thu Sep 25 23:37:02 1997  Mark Galassi  <rosalia@nis.lanl.gov>

	* scheme.texi (Guile options interface): renamed the symbol case
 	section to "Guile options interface".  "Reader options" is now a
 	subsection of that.  I've finally figured a lot of how options
 	work, thanks to discovering Mikael's comments in options.c and an
 	old note from Mikael to Jim describing it.
	(Guile options interface): reorganized the individual option
 	groups.  This section (on options) of the manual is now reasonably
	complete, unless I am completely missing something.

Wed Sep 24 15:25:03 1997  Mark Galassi  <rosalia@nis.lanl.gov>
