@@ -1,3 +1,11 @@
+1997-11-19  Tim Pierce  <twp@twp.tezcat.com>
+
+	* scheme.texi (String Fun): New node.
+	(Hash Tables): Added `get-handle' and `create-handle!' docs.
+
+	* posix.texi (Networking Databases): Add docs for gethost, getnet,
+	getserv, getproto.  Expanded on miscellaneous docs.
+
 1997-11-18  Tim Pierce  <twp@twp.tezcat.com>
 
 	* posix.texi: New file; moved docs for POSIX interface here.
